--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -139,3 +139,13 @@
   padding-top: 5%;
   
 }
+
+
+/* 
+.da11{
+  background-image: url('../../images//banner/rage\ design-09.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  
+} */
